# quantlab

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NNNN-agent-layer-scope.md  README.md  main.py  out.txt  out_full.txt  pyproject.toml  pytest.ini  run-analysis-agent-contract-pilot.md  run-analysis-agent-contract.md  run-analysis-agent-pilot.md  s2-1-run-analysis-agent-scaffold-pr-brief.md
.agents/: architecture.md  artifact-contracts.md  code-map.md  current-state.md  cursor-codex-cheatsheet.md  decision-log.md  implementation-rules.md  project-brief.md  session-log.md  stepbit-io-v1.md  stepbit-runbook.md  workflow.md
.cursor/: mcp.json
.github/: pull_request_template.md
desktop/: README.md  main.js  mcp-server.mjs  package-lock.json  package.json  preload.js  tsconfig.json  vite.config.ts
docs/: adr-desktop-shell-architecture.md  advantages-and-future.md  backtest-profiling.md  brand-guidelines.md  broker-safety-boundary.md  cli.md  desktop-candidates-shortlist-v1.md  desktop-package-lock-policy.md  desktop-platform-convergence-inventory.md  desktop-platform-convergence-status.md  desktop-react-legacy-dependencies.md  desktop-react-parity-gate.md  desktop-renderer-rollback.md  desktop-target-architecture.md  desktop-v0.1-april-sprint.md  execution-context-layer.md  execution-venue-strategy.md  frontend-integration.md  hyperliquid-boundary-review.md  landing-governance.md  learned-model-artifact-contract.md  native-acceleration-strategy.md  paper-session-runbook.md  pretrade-calculator-boundary.md  pretrade-handoff-intake.md  (+15 more)
(+334 files in other folders)
