[project]
name = "quantlab"
version = "0.1.0"
description = "Laboratorio cuantitativo personal: datos, estrategias, backtesting y (futuro) ejecución."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "yfinance>=0.2",
  "matplotlib>=3.9",
  "ta>=0.11",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "eth-account>=0.10,<0.14",
  "eth-utils>=2.1,<6.0",
  "msgpack>=1.0.5,<2.0.0",
  "tabulate",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyarrow>=23.0.0",
]
perf = [
  "numba>=0.61,<0.62",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
